# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 23 compatibility
    * Add OCaml 4.08.0 compatibility
    * Update the Erlang binary term format encoding implementations
      to support Erlang/OTP 23 with the programming languages
      Go, Haskell, Java, Javascript, OCaml, Perl, PHP, Python and Ruby
    * Update uuid

2019-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update Python Erlang binary term format encoding

2019-03-23 Michael Truog   <mjtruog at protonmail dot com>

    * Allow ACL strings to not contain pattern characters for
      exact matches (now ACL non-pattern strings are no longer
      modified to become patterns by adding a "*" suffix)

2019-03-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix quickstart so it uses request_type as the variable
      name for the request type instead of command

2019-03-20 Michael Truog   <mjtruog at protonmail dot com>

    * Update reltool_util
      (for release script use with Erlang/OTP >= 22)

2019-03-16 Michael Truog   <mjtruog at protonmail dot com>

    * Change all CloudI services to use "request type" as the
      variable name for the request type (instead of "type")
      (affects OCaml, Haskell and Erlang services)
    * Add {load_dot_erlang,false} reltool release option
      to prevent the ~/.erlang file from being used with the
      Erlang cloudi release when using Erlang/OTP >= 22
    * Avoid deprecated inspect.getargspec in the
      Python and Python/C CloudI API implementations

2019-01-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Erlang logging macros for providing the
      loglevel as a parameter (LOG, LOG_SYNC, LOG_APPLY)
    * Add CloudI Service API nodes_set log_reconnect
      configuration of the loglevel used when logging
      disconnected nodes before each reconnect attempt
